# CSC418Project

./: .gitmodules  CMakeLists.txt  DSSample.py  README.md  main.cpp  result.ppm
build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  raytracing
data/: bunny.1.json  bunny.json  bunny.stl  sphere-and-plane.json
include/: AABBTree.h  BoundingBox.h  DirectionalLight.h  HitInfo.h  Light.h  Material.h  MeshTriangle.h  Object.h  Plane.h  PointLight.h  Ray.h  Sphere.h  Triangle.h  TriangleMeshTree.h  TriangleSoup.h  blinn_phong_shading.h  deprecated.h  first_hit.h  insert_box_into_box.h  insert_triangle_into_box.h  list_to_matrix.cpp  list_to_matrix.h  max_size.cpp  max_size.h  min_size.cpp  min_size.h  per_corner_normals.h  pthread_args.h  ray_intersect_box.h  ray_intersect_triangle.h  readOBJ.cpp  readOBJ.h  read_json.h  triangle_area_normal.h  vertex_triangle_adjacency.h
src/: AABBTree.cpp  DirectionalLight.cpp  MeshTree.cpp  MeshTriangle.cpp  Plane.cpp  PointLight.cpp  Sphere.cpp  Triangle.cpp  TriangleMeshTree.cpp  TriangleSoup.cpp  blinn_phong_shading.cpp  creative.json  first_hit.cpp  insert_box_into_box.cpp  insert_triangle_into_box.cpp  per_corner_normals.cpp  ray_intersect_box.cpp  ray_intersect_triangle.cpp  raycolor.cpp  reflect.cpp  triangle_area_normal.cpp  vertex_triangle_adjacency.cpp  viewing_ray.cpp  write_ppm.cpp
